# Drekker

./: .env  .gitignore  README.md  datapack_schema.json  pyproject.toml
src/: __main__.py  drek_logging.py  environment_init_vars.py  project_vars.py  settings.py  sitecustomize.py
src/UI/: __init__.py
src/UI/core/: __init__.py  core_base.py  core_tabs.tcss  tab_attributes.py  tab_augmentations.py  tab_gear.py  tab_magic_resonance.py  tab_matrix.py  tab_misc.py  tab_skills.py  tab_vehicles.py
src/UI/error/: __init__.py
src/datapack_schemas/: __init__.py
src/drek/: logs.py  project_vars.py
src/drek/typing/: enums.py
src/drek_typing/: enums.py
src/drekker/: __init__.py  __main__.py  drek_logging.py  drekker.tcss  environment_init_vars.py  environment_settings.py  initialize.py  logging.py  project_vars.py  settings.py  sitecustomize.py  tabs.tcss  typing.py
src/drekker/UI/: __init__.py
src/drekker/UI/core/: __init__.py  core_base.py  tab_attributes.py  tab_augmentations.py  tab_gear.py  tab_magic_resonance.py  tab_matrix.py  tab_misc.py  tab_skills.py  tab_vehicles.py
src/drekker/datapacks/: enums.py
src/drekker/datapacks/models/: __init__.py  _pieces.py  base.py  qualities.py  serializer.py
src/drekker/enumerated_constants/: character_values.py  targets.py
src/drekker/logging/: init_logging.py  logging_bases.py  logging_config.py
src/drekker/sheets/: __init__.py  sr6character.py
src/drekker/sheets/base/: __init__.py  _sheet_basemodels.py  types.py
src/drekker/sheets/entry_types/: __init__.py  attrbase.py  attribute.py  skill.py
src/drekker/sheets/sr6/: __init__.py
src/drekker/sheets/sr6/entry_types/: attrbase.py  attribute.py  skill.py
src/drekker/systems/sr6/datapacks/: simple_enums.py
src/drekker/systems/sr6/datapacks/models/: __init__.py  parts.py  qualities.py
src/drekker/systems/sr6/enumerated_constants/: triggers.py
src/drekker/typing/: enums.py  targets_enum.py  triggers.py
src/drekker/ui/core/: __init__.py  core_base.py  tab_attributes.py  tab_augmentations.py  tab_gear.py  tab_magic_resonance.py  tab_matrix.py  tab_misc.py  tab_skills.py  tab_vehicles.py
src/sheets/: __init__.py  character.py  sr6character.py
src/sheets/entry_types/: __init__.py  attrbase.py  attribute.py  skill.py
tasks/: launch_textual_debug.ps1
