[project]
  authors = [
    { name = "Jacob Ogden", email = "jacob.ogden@yahoo.com" },
  ]
  dependencies = [
    "aiologic>=0.16.0",
    "pandas[performance]>=3.0.1",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.3",
    "rich-pixels>=3.0.1",
    "textual-autocomplete>=4.0.6",
    "textual-coloromatic>=1.0.0",
    "textual-colorpicker>=0.1.0",
    "textual-dev>=1.8.0",
    "textual-filedrop>=0.1",
    "textual-fspicker>=1.0.0",
    "textual-image[textual]>=0.8.5",
    "textual-pdf>=0.1.7",
    "textual-pyfiglet>=1.0.0",
    "textual-serve>=1.1.3",
    "textual-slidecontainer>=0.6.0",
    "textual-slider>=0.2.0",
    "textual-speedups>=0.2.1",
    "textual-tags>=0.3.3",
    "textual-timepiece>=0.7.0",
    "textual-transitions>=0.0.3",
    "textual-window>=0.7.0",
    "textual[syntax]>=8.1.1",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "winloop>=0.6.0 ; sys_platform == 'win32'",
  ]
  description = "Add your description here"
  name = "drekker"
  readme = "README.md"
  requires-python = ">=3.14"
  version = "0.1.1.dev1"

[tool.ruff]
  extend = "../pyproject.toml"

  src = [
    "./src",
  ]

  [tool.ruff.lint.flake8-type-checking]
    # Keeps imports intact if they are used as types inside a Pydantic model
    exempt-modules = [
    ]
    runtime-evaluated-base-classes = [
      "drekker.datapacks.models.Datapack",
      "drekker.datapacks.models._pieces.DatapackPiece",
      "drekker.sheets.ConfiguredBaseModel",
      "drekker.sheets.entry_types.EntryBase",
      "drekker.sheets.entry_types.attrbase.AttrEntryBase",
      "pydantic.BaseModel",
      "pydantic_settings.BaseSettings",
    ]
[dependency-groups]
  dev = [
    "debugpy>=1.8.21",
    "pandas-stubs>=3.0.0.260204",
    "types-python-dateutil>=2.9.0.20260323",
  ]
