[project]
  name            = "drekker"
  version         = "0.1.1.dev1"
  description     = "Add your description here"
  readme          = "README.md"
  requires-python = ">=3.14"
  authors         = [
    { name = "Jacob Ogden", email = "jacob.ogden@yahoo.com" },
  ]
  dependencies    = [
    "aiologic>=0.16.0",
    "pandas[performance]>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.3",
    "rich-pixels>=3.0.1",
    "textual-autocomplete>=4.0.6",
    "textual-coloromatic>=1.0.0",
    "textual-colorpicker>=0.1.0",
    "textual-dev>=1.8.0",
    "textual-filedrop>=0.1",
    "textual-fspicker>=1.0.0",
    "textual-image[textual]>=0.8.5",
    "textual-pdf>=0.1.7",
    "textual-pyfiglet>=1.0.0",
    "textual-serve>=1.1.3",
    "textual-slidecontainer>=0.6.0",
    "textual-slider>=0.2.0",
    "textual-speedups>=0.2.1",
    "textual-tags>=0.3.3",
    "textual-timepiece>=0.7.0",
    "textual-transitions>=0.0.3",
    "textual-window>=0.7.0",
    "textual[syntax]>=8.1.1",
    "typer>=0.26.7",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "winloop>=0.6.0 ; sys_platform == 'win32'",
  ]

  [project.scripts]
    schemagen = "drekker.datapacks.models.serializer:generate_schemas"

[dependency-groups]
  dev = [
    "debugpy>=1.8.21",
    "nuitka>=4.1.2",
    "ordered-set>=4.1.0",
    "pandas-stubs>=3.0.0.260204",
    "poethepoet>=0.46.0",
    "types-python-dateutil>=2.9.0.20260323",
    "zstandard>=0.25.0",
  ]

[build-system]
  requires      = [
    "uv_build>=0.11.19,<0.12",
  ]
  build-backend = "uv_build"

[tool.poe.tasks.build-win]
  help = "Build the Drekker app for Windows with Nuitka using the MSVC compiler"
  cmd  = """
    uv run nuitka
      --standalone
      --msvc=latest
      --output-dir=build
      --output-filename=drekker.exe
      --windows-console-mode=force
      --include-data-files=src/drekker/drekker.tcss=drekker.tcss
      --include-data-files=src/drekker/ui/core/core_tabs.tcss=ui/core/core_tabs.tcss
      src/drekker/
  """

[tool.pyright]
  verboseOutput          = true
  useLibraryCodeForTypes = true

  enableReachabilityAnalysis  = true
  analyzeUnannotatedFunctions = true
  deprecateTypingAliases      = true

  typeCheckingMode = "standard"

  reportPropertyTypeMismatch          = true
  reportMissingTypeStubs              = true
  reportImportCycles                  = true
  reportUntypedFunctionDecorator      = true
  reportUntypedClassDecorator         = true
  reportUntypedNamedTuple             = true
  reportPrivateUsage                  = true
  reportConstantRedefinition          = true
  reportDeprecated                    = true
  reportMissingSuperCall              = true
  reportUninitializedInstanceVariable = true
  reportMissingParameterType          = true
  # reportMissingTypeArgument           = true
  reportUnnecessaryIsInstance         = true
  reportUnnecessaryCast               = true
  reportUnnecessaryComparison         = true
  reportUnnecessaryContains           = true
  reportInvalidStubStatement          = true
  reportUnnecessaryTypeIgnoreComment  = true
  reportMatchNotExhaustive            = true
  reportUnreachable                   = true
  reportImplicitOverride              = true

  executionEnvironments = [
    { root = "src", extraPaths = ["src"] },
  ]

[tool.ruff]
  extend = "../pyproject.toml"

  src = [
    "./src",
  ]

  [tool.ruff.lint.flake8-type-checking]
    # Keeps imports intact if they are used as types inside a Pydantic model
    exempt-modules                 = []
    runtime-evaluated-base-classes = [
      "pydantic.BaseModel",
      "drekker.sheets.base.__init__.Modification",
      "drekker.sheets.base.__init__.EntryBase",
      "drekker.sheets.base.__init__.EntryStackRoot",
      "drekker.sheets.base.__init__.EntryStack",
      "drekker.sheets.base.__init__.SheetBase",
      "drekker.sheets.base._sheet_basemodels.ConfiguredBaseModel",
      "drekker.sheets.base._sheet_basemodels.ConfiguredRootModel",
      "drekker.sheets.base._sheet_basemodels.ConfiguredListModel",
      "drekker.systems.sr6.datapacks.__init__.Datapack",
      "drekker.systems.sr6.datapacks.models.__init__.Datapack",
      "drekker.datapacks.models.base.DatapackBase",
      "drekker.datapacks.models.base.DatapackPiece",
    ]

[tool.tombi]
  toml-version = "v1.1.0"

  [tool.tombi.format.rules]
    indent-sub-tables               = true
    indent-table-key-value-pairs    = true
    key-value-equals-sign-alignment = true
    trailing-comment-alignment      = true
